--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,10 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.21.0</version>
+            </plugin>
         </plugins>
     </build>
 </project>
